--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<div class="wrap">
 		<header class="header thetop">
 			<h1 class="glitched">KEPLERS</h1>
-			<!-- <a href="https://alchemon.net/index.html"><img class="headerimage" src="alchemon_logo.png"></a> -->
+			<h2 style="display: block; margin-left: auto; text-align: center;"> A collection featuring the 4933 exoplanets confirmed by NASA Exoplanet Science Institute</h2>
 		</header>
 
 		<main>
