--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="button.css">
 	<link rel="stylesheet" href="button.css">
 	<link rel="stylesheet" href="footer.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=JetBrains Mono">
+	<link href='https://fonts.googleapis.com/css?family=Barlow Condensed' rel='stylesheet'>
 	<link rel="stylesheet" href="glitch.css">
 	<link rel="stylesheet" href="scrolltotop.css">
 	<link rel="stylesheet" href="images.css">
@@ -24,9 +24,12 @@
 	<div class="wrap">
 		<header class="header thetop">
 			<h1 class="glitched">KEPLERS</h1>
-			<h2 style="display: block; margin-left: auto; text-align: center;"> A collection featuring the 4933 exoplanets confirmed by NASA Exoplanet Science Institute</h2>
+			<h2 style="display: block; margin-left: auto; text-align: center; text-transform: uppercase;"> A Trading Cards Collection featuring the 4933
+				exoplanets confirmed by NASA Exoplanet Science Institute</h2>
+			<h2 style="display: block; margin-left: auto; text-align: center; text-transform: uppercase;"> Built on the Algorand blockchain</h2>
 		</header>
 
+		<img style="width: 40%; padding: 10vh; display: block; margin-left: auto; margin-right: auto;";  src="Traits.png"> 
 		<main>
 			<br><br>
 
@@ -42,25 +45,50 @@
 			<br><br>
 
 			<section class="cards">
-				<a class="filterDiv common card alch1 animated"
+				<a class="filterDiv common card kepler1 animated"
 					href="https://www.randgallery.com/algo-collection/?address=306183859" target="_blank"> </a>
-				<a class="filterDiv common card alch2 animated"
+				<a class="filterDiv common card kepler2 animated"
 					href="https://www.randgallery.com/algo-collection/?address=306187531" target="_blank"> </a>
-				<a class="filterDiv common card alch3 animated"
+				<a class="filterDiv common card kepler3 animated"
 					href="https://www.randgallery.com/algo-collection/?address=332016564" target="_blank"> </a>
-				<a class="filterDiv common card alch4 animated"
+				<a class="filterDiv common card kepler4 animated"
 					href="https://www.randgallery.com/algo-collection/?address=332017894" target="_blank"> </a>
-				<a class="filterDiv un card alch5 animated"
+				<a class="filterDiv un card kepler5 animated"
 					href="https://www.randgallery.com/algo-collection/?address=400877134" target="_blank"> </a>
-				<a class="filterDiv rare card alch6 animated"
+				<a class="filterDiv rare card kepler6 animated"
 					href="https://www.randgallery.com/algo-collection/?address=527475282" target="_blank"> </a>
-				<a class="filterDiv rare card alch7 animated"
+				<a class="filterDiv rare card kepler7 animated"
 					href="https://www.randgallery.com/algo-collection/?address=527477069" target="_blank"> </a>
-				<a class="filterDiv rare card alch8 animated"
+				<a class="filterDiv rare card kepler8 animated"
 					href="https://www.randgallery.com/algo-collection/?address=527479654" target="_blank"> </a>
-				<!-- <a class="filterDiv rare card alch57 animated"
+				<a class="filterDiv common card kepler9 animated"
+					href="https://www.randgallery.com/algo-collection/?address=306183859" target="_blank"> </a>
+				<a class="filterDiv common card kepler10 animated"
+					href="https://www.randgallery.com/algo-collection/?address=306187531" target="_blank"> </a>
+				<a class="filterDiv common card kepler11 animated"
+					href="https://www.randgallery.com/algo-collection/?address=332016564" target="_blank"> </a>
+				<a class="filterDiv common card kepler12 animated"
+					href="https://www.randgallery.com/algo-collection/?address=332017894" target="_blank"> </a>
+				<a class="filterDiv un card kepler13 animated"
+					href="https://www.randgallery.com/algo-collection/?address=527475282" target="_blank"> </a>
+				<a class="filterDiv rare card kepler14 animated"
+					href="https://www.randgallery.com/algo-collection/?address=527477069" target="_blank"> </a>
+				<a class="filterDiv rare card kepler15 animated"
+					href="https://www.randgallery.com/algo-collection/?address=527479654" target="_blank"> </a>
+				<a class="filterDiv common card kepler16 animated"
+					href="https://www.randgallery.com/algo-collection/?address=332017894" target="_blank"> </a>
+				<a class="filterDiv un card kepler17 animated"
+					href="https://www.randgallery.com/algo-collection/?address=400877134" target="_blank"> </a>
+				<a class="filterDiv rare card kepler18 animated"
+					href="https://www.randgallery.com/algo-collection/?address=527475282" target="_blank"> </a>
+				<a class="filterDiv rare card kepler19 animated"
+					href="https://www.randgallery.com/algo-collection/?address=527477069" target="_blank"> </a>
+				<a class="filterDiv rare card kepler20 animated"
+					href="https://www.randgallery.com/algo-collection/?address=527479654" target="_blank"> </a>
+
+				<!-- <a class="filterDiv rare card kepler57 animated"
 					href="https://www.randgallery.com/algo-collection/?address=527481591" target="_blank"> </a>
-				<a class="filterDiv epic card alch58 animated"
+				<a class="filterDiv epic card kepler58 animated"
 					href="https://www.randgallery.com/algo-collection/?address=527483715" target="_blank"> </a> -->
 
 
@@ -104,7 +132,7 @@
 			<!-- <p class="footertext">
 				NXQIU4EHBA4XY2B5D23TVQA7WV2MOODRHPMQR2EX3GNEWFW5C5UKMUQPBE -->
 			</p>
-			<!-- <a href="https://alchemon.net/index.html"><img class="footerimage" src="alchemon_logo.png"></a> -->
+			<!-- <a href="https://kepleremon.net/index.html"><img class="footerimage" src="kepleremon_logo.png"></a> -->
 		</ul>
 	</nav>
 </footer>
