--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<h2 style="display: block; margin-left: auto; text-align: center; text-transform: uppercase;"> Built on the Algorand blockchain</h2>
 		</header>
 
-		<img style="width: 40%; padding: 10vh; display: block; margin-left: auto; margin-right: auto;";  src="Traits.png"> 
+		<img class="traits" src="Traits.png"> 
 		<main>
 			<br><br>
 
