--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 	<div class="wrap">
 		<header class="header thetop">
-			<h1 class="glitched">KEPLERS</h1>
+			<h1 class="glitched" style="font-style: italic;">KEPLERS</h1>
 			<h2 style="display: block; margin-left: auto; text-align: center; text-transform: uppercase;"> A Trading
 				Cards Collection featuring the 4933
 				exoplanets confirmed by NASA Exoplanet Science Institute</h2>
