--- a/index.html
+++ b/index.html
@@ -18,10 +18,19 @@
 	<link rel="stylesheet" href="scrolltotop.css">
 	<link rel="stylesheet" href="images.css">
 	<link rel="stylesheet" href="stars.css">
-	<link rel="stylesheet" href="datatableshack.css">
+	<link rel="stylesheet" href="customtable.css">
 	<link rel="stylesheet"
 		href="https://cdnjs.cloudflare.com/ajax/libs/material-components-web/4.0.0/material-components-web.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
+	<link rel="stylesheet" type="text/css"
+		href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/css/bootstrap.min.css" />
+	<link rel="stylesheet" type="text/css"
+		href="https://cdn.datatables.net/v/bs5/dt-1.11.4/r-2.2.9/datatables.min.css" />
+	<script type="text/javascript"
+		src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/js/bootstrap.bundle.min.js"></script>
+	<script type="text/javascript" src="https://cdn.datatables.net/v/bs5/dt-1.11.4/r-2.2.9/datatables.min.js"></script>
+
 </head>
 
 <div class="wrapper">
@@ -53,13 +62,13 @@
 	</div>
 
 	<section class="cards">
-		<table id="cardstable" class="table table-striped nowrap" style="width:100%;">
+		<table id="cardstable" class="table" style="width:100%;">
 			<thead>
 				<tr>
-					<th>A</th>
-					<th>B</th>
-					<th>C</th>
-					<th>D</th>
+					<th> </th>
+					<th> </th>
+					<th> </th>
+					<th> </th>
 				</tr>
 			</thead>
 
@@ -211,8 +220,16 @@
 <footer class="footer">
 	<!-- <p class="footertext">
 				NXQIU4EHBA4XY2B5D23TVQA7WV2MOODRHPMQR2EX3GNEWFW5C5UKMUQPBE -->
-	<h2 style="display: block; margin-left: auto; margin-right: auto; text-align: center; text-transform: uppercase; font-size:xx-large;">
+	<h2
+		style="display: block; margin-left: auto; margin-right: auto; text-align: center; text-transform: uppercase; font-size:xx-large;">
 		KEPLERS</h2>
+	<!-- <div class="loader">
+            <div class="rocket">
+                <image class="fa-rocket" src="hr_icon.png"></image>
+            </div>
+            <span><i></i></span>
+        </div> -->
+
 	<!-- <a href="https://kepleremon.net/index.html"><img class="footerimage" src="kepleremon_logo.png"></a> -->
 </footer>
 
@@ -221,12 +238,6 @@
 <script src="footeranimation.js"></script>
 <script src="glitch.js"></script>
 <script src="scrolltotop.js"></script>
-<script src="https://cdn.datatables.net/1.11.4/js/dataTables.bootstrap5.min.js"></script>
-<script src="https://cdn.datatables.net/1.11.4/js/dataTables.bootstrap.min.js"></script>
-<script src="https://cdn.datatables.net/fixedheader/3.2.1/js/dataTables.fixedHeader.min.js"></script>
-<script src="https://cdn.datatables.net/1.11.4/js/jquery.dataTables.min.js"></script>
-<script src="https://cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.min.js"></script>
-<script src="https://cdn.datatables.net/responsive/2.2.9/js/responsive.bootstrap.min.js"></script>
 <script src="table.js"></script>
 
 </html>
