--- a/index.html
+++ b/index.html
@@ -209,33 +209,37 @@
 				<a class="filterDiv card kepler50 animated"></a>
 				<a class="filterDiv card kepler51 animated"></a>
 				<a class="filterDiv card kepler52 animated"></a> -->
+
+
+
 		</main>
 
-		<style class="hover"></style>
+		<!-- <style class="hover"></style> -->
 </div>
 </div>
+
+<h2
+	style="display: block; margin-left: auto; margin-right: auto; text-align: center; text-transform: uppercase; font-size:xx-large; padding-bottom: 10vh;">
+	KEPLERS</h2>
 
 <a id="scroller"></a>
 
-<footer class="footer">
-	<!-- <p class="footertext">
+<!-- <footer class="footer">
+	<p class="footertext">
 				NXQIU4EHBA4XY2B5D23TVQA7WV2MOODRHPMQR2EX3GNEWFW5C5UKMUQPBE -->
-	<h2
-		style="display: block; margin-left: auto; margin-right: auto; text-align: center; text-transform: uppercase; font-size:xx-large;">
-		KEPLERS</h2>
-	<!-- <div class="loader">
+<!-- <div class="loader">
             <div class="rocket">
                 <image class="fa-rocket" src="hr_icon.png"></image>
             </div>
             <span><i></i></span>
         </div> -->
 
-	<!-- <a href="https://kepleremon.net/index.html"><img class="footerimage" src="kepleremon_logo.png"></a> -->
-</footer>
+<!-- <a href="https://kepleremon.net/index.html"><img class="footerimage" src="kepleremon_logo.png"></a> -->
+<!-- </footer> -->
 
 <script src="effect.js"></script>
 <script src="filtering.js"></script>
-<script src="footeranimation.js"></script>
+<!-- <script src="footeranimation.js"></script> -->
 <script src="glitch.js"></script>
 <script src="scrolltotop.js"></script>
 <script src="table.js"></script>
