--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 
 	<div class="wrap">
 		<header class="header thetop">
-			<h1 class="glitched" style="font-style: italic;">KEPLERS</h1>
-			<h2 style="display: block; margin-left: auto; text-align: center; text-transform: uppercase;"> A Trading
+			<h1 class="glitched" style="font-style: italic; padding-top: 3vw;">KEPLERS</h1>
+			<h2 style="display: block; margin-left: auto; text-align: center; text-transform: uppercase; padding-top: 6vw;"> A Trading
 				Cards Collection featuring the 4933
 				exoplanets confirmed by NASA Exoplanet Science Institute</h2>
-			<h2 style="display: block; margin-left: auto; text-align: center; text-transform: uppercase;"> Built on the
+			<h2 style="display: block; margin-left: auto; text-align: center; text-transform: uppercase; padding-bottom: 2vw;"> Built on the
 				Algorand blockchain</h2>
 		</header>
 
