--- a/index.html
+++ b/index.html
@@ -27,9 +27,6 @@
 		href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/css/bootstrap.min.css" />
 	<link rel="stylesheet" type="text/css"
 		href="https://cdn.datatables.net/v/bs5/dt-1.11.4/r-2.2.9/datatables.min.css" />
-	<script type="text/javascript"
-		src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/js/bootstrap.bundle.min.js"></script>
-	<script type="text/javascript" src="https://cdn.datatables.net/v/bs5/dt-1.11.4/r-2.2.9/datatables.min.js"></script>
 
 </head>
 
@@ -41,10 +38,14 @@
 	<div class="wrap">
 		<header class="header thetop">
 			<h1 class="glitched" style="font-style: italic; padding-top: 3vw;">KEPLERS</h1>
-			<h2 style="display: block; margin-left: auto; text-align: center; text-transform: uppercase; padding-top: 6vw;"> A Trading
+			<h2
+				style="display: block; margin-left: auto; text-align: center; text-transform: uppercase; padding-top: 6vw;">
+				A Trading
 				Cards Collection featuring the 4933
 				exoplanets confirmed by NASA Exoplanet Science Institute</h2>
-			<h2 style="display: block; margin-left: auto; text-align: center; text-transform: uppercase; padding-bottom: 2vw;"> Built on the
+			<h2
+				style="display: block; margin-left: auto; text-align: center; text-transform: uppercase; padding-bottom: 2vw;">
+				Built on the
 				Algorand blockchain</h2>
 		</header>
 
@@ -210,11 +211,9 @@
 				<a class="filterDiv card kepler51 animated"></a>
 				<a class="filterDiv card kepler52 animated"></a> -->
 
-
-
 		</main>
 
-		<!-- <style class="hover"></style> -->
+		<style class="hover"></style>
 </div>
 </div>
 
@@ -243,5 +242,9 @@
 <script src="glitch.js"></script>
 <script src="scrolltotop.js"></script>
 <script src="table.js"></script>
+<script type="text/javascript"
+	src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/js/bootstrap.bundle.min.js"></script>
+<script type="text/javascript" src="https://cdn.datatables.net/v/bs5/dt-1.11.4/r-2.2.9/datatables.min.js"></script>
+
 
 </html>
