--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				Algorand blockchain</h2>
 		</header>
 
-		<img class="traits" src="Traits2.png">
+		<img class="traits" src="Traits3.png">
 		<main>
 			<br><br>
 
@@ -146,12 +146,12 @@
 					<td><a class="filterDiv card kepler47 animated"></a></td>
 					<td><a class="filterDiv card kepler48 animated"></a></td>
 				</tr>
-				<tr>
+				<!-- <tr>
 					<td><a class="filterDiv card kepler49 animated"></a></td>
 					<td><a class="filterDiv card kepler50 animated"></a></td>
 					<td><a class="filterDiv card kepler51 animated"></a></td>
 					<td><a class="filterDiv card kepler52 animated"></a></td>
-				</tr>
+				</tr> -->
 
 
 			</tbody>
@@ -218,8 +218,19 @@
 </div>
 
 <h2
-	style="display: block; margin-left: auto; margin-right: auto; text-align: center; text-transform: uppercase; font-size:xx-large; padding-bottom: 10vh;">
-	KEPLERS</h2>
+	style="display: block; margin-left: auto; margin-right: auto; text-align: center; text-transform: uppercase; font-size:xx-large; padding-bottom: 5vh;">
+	WALLETS</h2>
+<h3
+	style="display: block; margin-left: auto; margin-right: auto; text-align: center; text-transform: uppercase; font-size: x-large; padding-bottom: 1vh;">
+	KPLRHH5XEHCKKB5JTN7WN2RHGMJYD7Y3EAW6JI6KBDP5BEOEFYAQYSNNB4</h3>
+<h3
+	style="display: block; margin-left: auto; margin-right: auto; text-align: center; text-transform: uppercase; font-size: x-large; padding-bottom: 1vh;">
+	KPLRBUXG7DPOVLST4ERJYASNTVE6S7M4DOXZWGBIEF6ATO7ZAZAK6Z2ODM</h3>
+<h3
+	style="display: block; margin-left: auto; margin-right: auto; text-align: center; text-transform: uppercase; font-size: x-large; padding-bottom: 8vh;">
+	KPLRUOAMGSEU66U2U4ETPGHDSWPAWWJZ7W3BCB737OI6ZTQHDPOWAO2YZU</h3>
+
+
 
 <a id="scroller"></a>
 
