--- a/index.html
+++ b/index.html
@@ -40,14 +40,22 @@
 			<h1 class="glitched" style="font-style: italic; padding-top: 3vw;">KEPLERS</h1>
 			<h2
 				style="display: block; margin-left: auto; text-align: center; text-transform: uppercase; padding-top: 6vw;">
-				A Trading
+				A Dynamic Trading
 				Cards Collection featuring the 4933
 				exoplanets confirmed by NASA Exoplanet Science Institute</h2>
 			<h2
 				style="display: block; margin-left: auto; text-align: center; text-transform: uppercase; padding-bottom: 2vw;">
 				Built on the
 				Algorand blockchain</h2>
+			<h2
+				style="display: block; margin-left: auto; text-align: center; text-transform: uppercase; padding-bottom: 2vw;">
+				Newly discovered planets will be realeased via expansion sets</h2>
+			<h2
+				style="display: block; margin-left: auto; text-align: center; text-transform: uppercase; padding-bottom: 2vw;">
+				30% of royalties will be destined towards charities, voted by holders</h2>
+
 		</header>
+		
 
 		<img class="traits" src="Traits3.png">
 		<main>
