--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<header class="header thetop">
 			<h1 class="glitched" style="font-style: italic; padding-top: 3vw;">KEPLERS</h1>
 			<h2
-				style="display: block; margin-left: auto; text-align: center; text-transform: uppercase; padding-top: 6vw;">
+				style="display: block; margin-left: auto; text-align: center; text-transform: uppercase; padding-top: 6vw; padding-bottom: 2vw">
 				A Dynamic Trading
 				Cards Collection featuring the 4933
 				exoplanets confirmed by NASA Exoplanet Science Institute</h2>
